# extremetuxracer-win32

./: .project  CMakeLists.txt  Makefile.in  aclocal.m4  bh.h  configure  etr_config.h.in  game_config.cpp  main.cpp  mathlib.cpp  spx.cpp  textures.cpp  translation.cpp
config/: highscore  messages  options.txt  players
data/: Makefile.in
data/char/: Makefile.in
data/char/beastie/: Makefile.in
data/char/boris/: Makefile.in
data/char/samuel/: Makefile.in
data/char/trixi/: Makefile.in
data/char/tux/: Makefile.in
data/courses/: Makefile.in
data/courses/bumpy_ride/: Makefile.in
data/courses/bunny_hill/: Makefile.in
data/courses/challenge_one/: Makefile.in
data/courses/chinese_wall/: Makefile.in
data/courses/chragis_gagiwaetter/: Makefile.in
data/courses/course/: Makefile.in
data/courses/downhill_fear/: Makefile.in
data/courses/explore_mountains/: Makefile.in
data/courses/frozen_lakes/: Makefile.in
data/courses/frozen_river/: Makefile.in
data/courses/hippo_run/: Makefile.in
data/courses/holygrail/: Makefile.in
data/courses/in_search_of_vodka/: Makefile.in
data/courses/keep_country_tidy/: Makefile.in
data/courses/milos_castle/: Makefile.in
data/courses/path_of_daggers/: Makefile.in
data/courses/penguins_cant_fly/: Makefile.in
data/env/: Makefile.in
data/fonts/: Makefile.in
data/music/: Makefile.in
data/objects/: Makefile.in
data/players/: Makefile.in
data/sounds/: Makefile.in
data/terrains/: Makefile.in
data/textures/: Makefile.in
data/translations/: Makefile.in
doc/: Makefile.in
resources/: Makefile.in
(+16 files in other folders)
